--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = "changeme"
+play.http.secret.key=${?APPLICATION_SECRET}
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
@@ -282,7 +282,7 @@ play.filters {
   # This is useful to prevent cache poisoning attacks.
   hosts {
     # Allow requests to example.com, its subdomains, and localhost:9000.
-    #allowed = [".example.com", "localhost:9000"]
+    allowed = [".us-east-2.compute.amazonaws.com", "localhost:9000"]
   }
 }
 
